implemented dust sensor

--- a/ESP8266_MQTT_Schlafzi/platformio.ini
+++ b/ESP8266_MQTT_Schlafzi/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	wifwaf/MH-Z19@^1.5.4
 	knolleary/PubSubClient@^2.8
+	lewapek/Nova Fitness Sds dust sensors library@^1.5.1
