--- a/ESP8266_MQTT_Schlafzi/platformio.ini
+++ b/ESP8266_MQTT_Schlafzi/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	wifwaf/MH-Z19@^1.5.4
 	knolleary/PubSubClient@^2.8
 	lewapek/Nova Fitness Sds dust sensors library@^1.5.1
+	robtillaart/DHT20@^0.2.2
