--- a/ESP8266_MQTT_Schlafzi/platformio.ini
+++ b/ESP8266_MQTT_Schlafzi/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	lewapek/Nova Fitness Sds dust sensors library@^1.5.1
 	robtillaart/DHT20@^0.2.2
+	gyverlibs/GyverOLED@^1.6.1
